fix: prevent generate button text overflow using spinner state

--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,7 @@ a {
 .scrum-actions > button {
     flex: 1 1 0;
     min-width: 0;
+    overflow: hidden;
 }
 
 .scrum-actions > button span {
